app/assets/stylesheets/site/buttons.css.scss
@import "site/variables";

// FIXME: changed this hack by custom class
:not(.btn-group) > .btn:not(.btn-circle):not(.btn-unstyled) {
  padding-right: 24px;
  padding-left: 24px;
  border-radius: 2px;
  font-size: $font-size-small;
  font-weight: $font-weight-bold;
  text-transform: uppercase;
}

.btn.active {
  font-weight: bold;
}

.btn-circle {
  width: 40px;
  height: 40px;
  padding: 0;
  border-radius: 50%;
  line-height: 40px;
  text-align: center;

  .fa {
    font-size: 16px;
    position: relative;
  }

  .fa-pencil {
    top: -1px;
  }

  &.btn-lg {
    width: 56px;
    height: 56px;
    line-height: 56px;

    .fa {
      font-size: 24px;
    }
  }
}

.btn-outline {
  background: none;
  border-color: $text-color;

  &:active,
  &:focus,
  &:hover {
    background-color: $text-color;
    color: white;
    border-color: $text-color;
  }
}

.btn-outline-primary {
  background: none;
}

.btn-raised {
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
              0 1px 5px 0 rgba(0,0,0,0.12),
              0 3px 1px -2px rgba(0,0,0,0.2);
}

.btn-unstyled {
  margin: 0;
  padding: 0;
  border: none;
  background: none;
}

